Fix whitespace and links opening in new windows

--- a/css/index.scss
+++ b/css/index.scss
@@ -639,7 +639,7 @@ button {
     line-height: 1.1;
     padding: 0 0 30px;
     outline: 0;
-    white-space: pre;
+    white-space: pre-line;
   }
 }
 
